--- a/ci/docker-compose.yml
+++ b/ci/docker-compose.yml
@@ -8,12 +8,12 @@ services:
     volumes:
       - postgresDB:/data/postgres
     env_file:
-      - ./app.env
+      - ./../app.env
   pgAdmin:
     image: dpage/pgadmin4
     container_name: pgAdmin
     env_file:
-      - ./app.env
+      - ./../app.env
     ports:
       - '5050:80'
 volumes:
